Revert "Merge remote-tracking branch 'origin/Luping' into Jon"
This reverts commit 381e3397186d8c3d542917b889a056c43db67304, reversing
changes made to c1fe09caf32e6b4c85b4faeae9f8de1ea37069e1.

--- a/SA51_JavaCA/src/main/resources/templates/product/productform.html
+++ b/SA51_JavaCA/src/main/resources/templates/product/productform.html
@@ -9,9 +9,8 @@
 		</div>
 	</div>
 	
-	<div class = "row mx-4">
-	<form action="" th:action="@{/product/save}" method="post">
-	<div class="row" th:object="${p}">
+	<form action="" th:object="${p}" th:action="@{/product/save}" method="post">
+	<div class="row mx-3">
 		<div class="col-sm-6 mr-2">
 			
 			<table class="table table-bordered table-sm"> 
@@ -34,26 +33,17 @@
 			</tr>
 			
 			<tr><td class="pt-2">Type:</td> 
-			<td><input list="types" class="form-control" th:field="*{type}">	
-					<datalist id="types">
-				 	 <option th:each="t: ${types}" th:value="${t}">
-					</datalist>
+			<td><input type="text" class="form-control" th:field="*{type}"> 
 			<p style="color:red" th:if="${#fields.hasErrors('type')}" th:errors="*{type}"></p></td>
 			</tr>
 			
 			<tr><td class="pt-2">Category:</td> 
-			<td><input list="categories" class="form-control" th:field="*{category}">	
-					<datalist id="categories">
-				 	 <option th:each="cat: ${categories}" th:value="${cat}">
-					</datalist>
+			<td><input type="text" class="form-control" th:field="*{category}"> 
 			<p style="color:red" th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></p></td>
 			</tr>
 			
 			<tr><td class="pt-2">Sub-category:</td> 
-			<td><input list="subcategories" class="form-control" th:field="*{subcategory}">	
-					<datalist id="subcategories">
-				 	 <option th:each="subcat: ${subcategories}" th:value="${subcat}">
-					</datalist>
+			<td><input type="text" class="form-control" th:field="*{subcategory}"> 
 			<p style="color:red" th:if="${#fields.hasErrors('subcategory')}" th:errors="*{subcategory}"></p></td>
 			</tr>
 			
@@ -64,6 +54,11 @@
 				<datalist id="brands">
 				  <option th:each="b: ${brands}" th:value="${b.name}">
 				</datalist>
+				<div th:if="*{id}!=0" class="checkbox">
+				<label><input type="checkbox" th:name="editBrandName" th:value="1">
+				Edit brand name for all products under the same brand</label>
+				</div>
+			</td>
 			</tr>
 			
 			</table>
@@ -104,6 +99,14 @@
 				<datalist id="suppliers">
 			  	<option th:each="s: ${suppliers}" th:value="${s.supplierName}">
 				</datalist>
+				<div th:if="*{id}!=0" class="checkbox">
+				<label><input type="checkbox" th:name="editSupplierName" th:value="1">
+				Edit brand name for all products under the same brand</label>
+				</div>
+				<!-- <div th:if="*{id}!=0">
+				<input class="form-check-input" type="checkbox" value="" id="editSupplierName">
+				  <label class="form-check-label" for="editSupplierName">Edit supplier name for all products under the same brand</label>
+				</div>-->
 				
 			</td>
 			</tr>
@@ -122,30 +125,16 @@
 			</tr>
 			</table>
 		</div>	
-		</div>
-	</div>
-	
-	<div class="row">
-		<div class="col-sm px-4">
-		<div class="row" th:if="${p.id}!=0">
-			<label><input type="checkbox" th:name="editBrandName" th:value="1">
-			Edit brand name for all products under the same brand</label>
-		</div>
-		<div class="row" th:if="${p.id}!=0">
-			<label><input type="checkbox" th:name="editSupplierName" th:value="1">
-			Edit supplier name for all suppliers under the same brand</label>
-		</div>
-		</div>
-		<div class="col-sm">
+		
 		<div class="row float-right">
-	       <button class="btn btn-success" type="submit" style="margin:10px">Save</button> 
-	       <a th:if="${p.id}!=0" class="btn btn-danger" th:href="@{/product/detail/} + ${p.id}" style="margin:10px">Cancel</a>
-	       <a th:if="${p.id}==0"class="btn btn-danger" th:href="@{/product}" style="margin:10px">Cancel</a>
+        <button class="btn btn-success" type="submit" style="margin:10px">Save</button>
+        <a th:if="*{id}!=0" class="btn btn-danger" th:href="@{/product/detail/} + *{id}" style="margin:10px">Cancel</a>
+        <a th:if="*{id}==0" class="btn btn-danger" th:href="@{/product}" style="margin:10px">Cancel</a>
 		</div>
+	
 		</div>
 	</div>
 	</form>
-	</div>
 	
 </body>
 </html>
