--- a/SA51_JavaCA/src/main/resources/templates/transaction/transactions.html
+++ b/SA51_JavaCA/src/main/resources/templates/transaction/transactions.html
@@ -52,8 +52,7 @@
 								<a href="#" class="btn btn-light" th:href="@{/transaction/edit/} + ${t.id}">Edit</a>
 								</td>
 								<td>
-								<a href="#" class="btn btn-danger" th:href="@{/transaction/delete/} + ${t.id}" 
-								onclick="return confirm('Are you sure you want to delete this transaction? \r\nAll related details will be deleted.')">Delete</a>
+								<a href="#" class="btn btn-danger" th:href="@{/transaction/delete/} + ${t.id}">Delete</a>
 								</td>
 							</tr>
 					  </tbody>
